--- a/desktop/trp/marketingsite/wp-content/themes/sage-master/assets/styles/pages/_home.scss
+++ b/desktop/trp/marketingsite/wp-content/themes/sage-master/assets/styles/pages/_home.scss
@@ -229,5 +229,8 @@
 	background-color: #fff;
 	img {
 		margin: 125px 0;
+		@media (max-width: $screen-md-min) {
+			margin: 50px 0;
+		}
 	}
 }
